chore(front): remove ContractModal órfão e limpeza de assets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
+
 version: '3.9'
 
 services:
   db:
     image: postgres:15
-    container_name: vize-db
+    container_name: antecipafacil-db
     restart: always
     environment:
-      POSTGRES_DB: vize
+      POSTGRES_DB: antecipafacil
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
