--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,19 @@
-# --- .NET build ---
+# VS / .NET
+.vs/
 **/bin/
 **/obj/
 *.user
 *.suo
 
-# --- Node/Front ---
+# Node / Vite
 node_modules/
+dist/
 front/node_modules/
 front/dist/
-dist/
-npm-debug.log*
-yarn-error.log*
 
-# --- Vite/Cache ---
-front/.vite/
-.vite/
-
-# --- Sistema ---
+# SO
 .DS_Store
 Thumbs.db
 
-# --- Env/Configs locais (se existirem) ---
-*.local.json
+# Env
 *.env
-*.env.*
-.vscode/
