--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,5 @@
-
-version: '3.9'
-
-services:
-  db:
-    image: postgres:15
-    container_name: antecipafacil-db
-    restart: always
-    environment:
-      POSTGRES_DB: antecipafacil
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
+docker compose config
+docker compose up -d
+git add docker-compose.yml
+git commit -m "chore(docker): remove obsolete version key"
+git push
